.k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
spec:
  rules:
  - host: coursemapper-webserver.lacolhost.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webapp
            port:
              number: 80
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: webserver
            port:
              number: 81
